@@ -58,30 +58,31 @@ jags <- function( data, inits,
     stop("Number of initialized chains (length(inits)) != n.chains")
   }
 
-  
+  #load.module("lecuyer")
+  load.module("glm")
   init.values <- vector("list", n.chains)
   if(missing(inits)){
     for (i in 1:n.chains){
         init.values[[i]]$.RNG.name <- "base::Mersenne-Twister"
-        init.values[[i]]$.RNG.seed <- jags.seed + runif(1, 10, 20) * i
+        init.values[[i]]$.RNG.seed <- abs(.Random.seed[i+1])
     }
   } else if (is.null(inits)){
       for (i in 1:n.chains){
         init.values[[i]]$.RNG.name <- "base::Mersenne-Twister"
-        init.values[[i]]$.RNG.seed <- jags.seed + runif(1, 10, 20) * i
+        init.values[[i]]$.RNG.seed <- abs(.Random.seed[i+1])
       }
   } else if (is.function(inits)){
       if (any(names(formals(inits)) == "chain")){
         for (i in 1:n.chains){
           init.values[[i]] <- inits(chain = i)
           init.values[[i]]$.RNG.name <- "base::Mersenne-Twister"
-          init.values[[i]]$.RNG.seed <- jags.seed + runif(1, 10, 20) * i
+          init.values[[i]]$.RNG.seed <- abs(.Random.seed[i+1])
         }
       } else{
           for (i in 1:n.chains){
             init.values[[i]] <- inits()
             init.values[[i]]$.RNG.name <- "base::Mersenne-Twister"
-            init.values[[i]]$.RNG.seed <- jags.seed + runif(1, 10, 20) * i
+            init.values[[i]]$.RNG.seed <- abs(.Random.seed[i+1])
           }
       }
   } else {
@@ -90,7 +91,7 @@ jags <- function( data, inits,
     }
     for (i in 1:n.chains){
       init.values[[i]]$.RNG.name <- "base::Mersenne-Twister"
-      init.values[[i]]$.RNG.seed <- jags.seed + runif(1, 10, 20) * i
+      init.values[[i]]$.RNG.seed <- abs(.Random.seed[i+1])
     }
   } 
       
